# email_triage_openenv

./: .gitignore  README.md  inference.py  pyproject.toml  requirements.txt
env/: environment.py  models.py
server/: app.py
